--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 <body>
   <div class="container-fluid">
     <div class="jumbotron">
-      <h2 class="text-center">Welcome to our website!</h2>
-      <h3 class="text-center">Look at this button! Wow, let's click on it!</h3>
+      <h2 class="text-center font-weight-normal">Welcome to our website!</h2>
+      <h3 class="text-center font-weight-normal">Look at this button! Wow, let's click on it!</h3>
       <button class="btn btn-primary btn-block">Learn more</button>
     </div>
+    <div class="row-fluid border-top border-bottom">
+      <h5 class="mt-2 d-inline-block">Let's look at some random pictures!</h5>
+      <p class="mt-2 ml-1 d-inline-block">from http://lorempixel.com</p>
+    </div>
+    <div class="alert alert-success text-center mt-3 small" role="alert">Thanks for visiting!</div>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
