Add cards and finish the exercise

--- a/index.html
+++ b/index.html
@@ -15,8 +15,28 @@
       <button class="btn btn-primary btn-block">Learn more</button>
     </div>
     <div class="row-fluid border-top border-bottom">
-      <h5 class="mt-2 d-inline-block">Let's look at some random pictures!</h5>
-      <p class="mt-2 ml-1 d-inline-block">from http://lorempixel.com</p>
+      <h5 class="mt-2 mb-1 d-inline-block">Let's look at some random pictures!</h5>
+      <p class="mt-2 ml-1 mb-1 d-inline-block">from http://lorempixel.com</p>
+      <div class="card-group">
+        <div class="card col-4 border-0 mb-3 px-0">
+          <div class="card-body p-0">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deleniti asperiores expedita facere ab consequuntur voluptate repellat odit esse inventore tenetur, tempore, nesciunt quod voluptates omnis eveniet minus animi. Sunt.</p>
+          </div>
+          <img src="https://cdn.pixabay.com/photo/2019/05/07/09/05/coffee-bean-4185334_1280.jpg" class="card-img-bottom border p-1" alt="Coffee">
+        </div>
+        <div class="card col-4 border-0 mb-3 mx-5 px-0">
+          <div class="card-body p-0">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deleniti asperiores expedita facere ab consequuntur voluptate repellat odit esse inventore tenetur, tempore, nesciunt quod voluptates omnis eveniet minus animi. Sunt.</p>
+          </div>
+          <img src="https://cdn.pixabay.com/photo/2019/05/07/09/05/coffee-bean-4185334_1280.jpg" class="card-img-bottom border p-1" alt="Coffee">
+        </div>
+        <div class="card col-4 border-0 mb-3 px-0">
+          <div class="card-body p-0">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deleniti asperiores expedita facere ab consequuntur voluptate repellat odit esse inventore tenetur, tempore, nesciunt quod voluptates omnis eveniet minus animi. Sunt.</p>
+          </div>
+          <img src="https://cdn.pixabay.com/photo/2019/05/07/09/05/coffee-bean-4185334_1280.jpg" class="card-img-bottom border p-1" alt="Coffee">
+        </div>
+      </div>
     </div>
     <div class="alert alert-success text-center mt-3 small" role="alert">Thanks for visiting!</div>
   </div>
