Add dashboard table requirement

--- a/part2.html
+++ b/part2.html
@@ -20,6 +20,51 @@
       <a class="nav-item nav-link" href="#">Messages <span class="badge badge-success">12</span></a>
     </div>
   </nav>
+  <div class="container-fluid">
+    <h2 class="my-3">Dashboard:</h2>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Team</th>
+          <th scope="col">All Star</th>
+          <th scope="col">Remove</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Steph</td>
+          <td>Warriors</td>
+          <td>Yes</td>
+          <td><span class="badge badge-danger p-2"><i class="fa fa-trash text-white" aria-hidden="true"></i></span></td>
+        </tr>
+        <tr>
+          <td>Lebron</td>
+          <td>Cavaliers</td>
+          <td>Yes</td>
+          <td><span class="badge badge-danger p-2"><i class="fa fa-trash text-white" aria-hidden="true"></i></span></td>
+        </tr>
+        <tr>
+          <td>Dwayne</td>
+          <td>Heat</td>
+          <td>Yes</td>
+          <td><span class="badge badge-danger p-2"><i class="fa fa-trash text-white" aria-hidden="true"></i></span></td>
+        </tr>
+        <tr>
+          <td>Kobe</td>
+          <td>Lakers</td>
+          <td>Yes <span class="badge badge-warning">Last</span></td>
+          <td><span class="badge badge-danger p-2"><i class="fa fa-trash text-white" aria-hidden="true"></i></span></td>
+        </tr>
+        <tr>
+          <td>Isaiah</td>
+          <td>Celtics</td>
+          <td>Yes <span class="badge badge-success text-white">First</span></td>
+          <td><span class="badge badge-danger p-2"><i class="fa fa-trash text-white" aria-hidden="true"></i></span></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
