--- a/part2.html
+++ b/part2.html
@@ -64,6 +64,25 @@
         </tr>
       </tbody>
     </table>
+    <h2 class="mt-3 pt-2 border-top">Todos:</h2>
+    <div class="alert alert-success mb-0" role="alert">
+      Feel good about Bootstrap
+    </div>
+    <div class="alert alert-info mb-0" role="alert">
+      Feel informed about Bootstrap
+    </div>
+    <div class="alert alert-warning mb-0" role="alert">
+      Feel warned about Bootstrap
+    </div>
+    <div class="alert alert-warning mb-0" role="alert">
+      Maybe I should read the docs...
+    </div>
+    <div class="alert alert-danger mb-0" role="alert">
+      Danger zone
+    </div>
+    <div class="alert alert-danger mb-0" role="alert">
+      I really should read the docs...
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
